--- a/app/index.html
+++ b/app/index.html
@@ -7,6 +7,9 @@
   <title>Clear View Escapes</title>
   <meta name="keywords" content="Travel planning, travel bundles, travel escapes">
   <meta name="description" content="Your clarity. One trip away. We create soul restoring journeys that inspire you to be you.">
+  
+  <link rel="stylesheet" href="temp/styles/styles.css">
+  
 </head>
 <body>
   <header>
@@ -24,9 +27,11 @@
   <div class="large-hero">
     <img src="assets/images/hero--large.jpg">
     <h1>Your clarity.</h1>
-    <h2>One trip away.</h2>
-    <p>We create soul restoring journeys that inspire you to be you.</p>
-    <p><a href="#">Get Started Today</a></p>
+    <div class="large-hero__text-content">
+      <h2>One trip away.</h2>
+      <p>We create soul restoring journeys that inspire you to be you.</p>
+      <p><a href="#">Get Started Today</a></p>
+    </div>
   </div>
 
   <div id="our-beginning">
